--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     cupertino_icons: ^1.0.2
     get: ^4.6.5
     flutter_animated_button: ^2.0.3
+    lottie: ^3.1.0
 
 dev_dependencies:
     flutter_test:
