--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     get: ^4.6.5
     flutter_animated_button: ^2.0.3
     lottie: ^3.1.0
+    cloud_firestore: ^4.15.7
 
 dev_dependencies:
     flutter_test:
